# ai-coding-share

./: CLAUDE.md  ai_coding_practice定稿.pptx  分享会资料.rar
.claude/: settings.local.json
my-ideas/: AI编程经验分享登记表-平台.xlsx  一个教训.txt  一些用claude code 可以做的事情.txt  几点思路.txt  奢侈但有效.txt  思路1.txt  感受2.txt
my-ideas/01-经验总结/: ai-coding-evolution.md
my-ideas/02-复盘教训/: lessons-learned.md
my-ideas/03-项目案例/: aip-portal-evolution.md
my-ideas/04-待整理/: todo-items.md
output/: 演示录制脚本.md
output/design1/: AI协作编程实战.pptx  generate_ppt.py
output/design2/: 01-Claude-Code使用全景分析.md  02-经验教训与翻车记录.md
output/reference/: 04-工作流与高级功能实践.md
output/v1--(reject)/: 文案脚本.md
output/v2--调整框架后初版(reject)/: 一个演讲大纲思路.txt
output/v3--claude提示词 +cc脚本/: 文稿.md
output/v3.1--cc脚本-chatgpt 样式提示词/: PPT大纲.md  generate_ppt_v3.py  ~$ai_coding_practice.pptx
output/v5/: ai_coding_practice.pptx  gen_helpers.py  gen_main.py  gen_part0.py  gen_part3.py  gen_part4.py
output/v5--approved/: PPT大纲.md  gen_part1.py  gen_part2.py  演示文稿生成.md  演讲文稿.md  演讲详细大纲.md
output/v5.1/: PPT大纲.md  PPT生成方案.md  演讲文稿（演讲词）.md  演讲详细大纲.md
output/v5.2/: PPT大纲.md  PPT生成方案.md  演讲文稿（大纲版）.md  演讲文稿（演讲词）.md  演讲文稿（精简版）.md  演讲详细大纲.md
output/v6--claude-code + chatgpt 样式提示词/: AI协作编程实践.pptx  演讲详细大纲.md  讲稿.md
reference/: Harness design for long-running application development - Anthropic.md  工程技术：在智能体优先的世界中利用 Codex - OpenAI.md
reference/harness-engineering/examples/level1-simple-project/: CLAUDE.md  README.md  pyproject.toml
reference/harness-engineering/examples/level1-simple-project/src/: __init__.py  main.py  task_manager.py
(+151 files in other folders)
